--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-/src/main/java/uk/ncl/CSC8016/jackbergus/coursework/ok_implementation
+src/main/java/uk/ncl/CSC8016/jackbergus/coursework/ok_implementation/
+target/
+target/*
+.idea/
+.idea/*
